--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-streamlit==1.39.0
-pandas==2.1.4
-numpy==1.24.3
-scikit-learn==1.3.2
-plotly==5.18.0
-seaborn==0.13.0
-matplotlib==3.8.2
-requests==2.31.0
-python-dateutil==2.8.2
-pytz==2023.3
-joblib==1.3.2
+streamlit>=1.28.0
+pandas>=2.0.0
+numpy>=1.24.0
+scikit-learn>=1.3.0
+plotly>=5.17.0
+seaborn>=0.12.0
+matplotlib>=3.7.0
+requests>=2.31.0
+python-dateutil>=2.8.2
+pytz>=2023.3
+joblib>=1.3.0
+
